--- a/LECTURE2.Rmd
+++ b/LECTURE2.Rmd
@@ -68,39 +68,9 @@ The reason? Populations can exhibit **exponential growth**, in which each new ad
 The importance of the method is this: if we know certain variables, mostly desired by ecologists and in some cases already determined by them, we can predict certain results which would not normally be predictable or even expected by ecologists. The stage of verification of these mathematical predictions has hardly begun; but their importance cannot be under-estimated, and we look forward to seeing the further volumes of Lotka’s studies.       
   - Charles Elton    
   
-## Population ecology is central to many of the most pressing questions in modern ecology and evolution
+## Exponential growth
 
-This class is mostly about how important Population Ecology is to wildlife conservation and management. But it is worth mentioning that Population Ecology is a very active field of basic science, and that population ecology is at the core of many of the central questions of ecology and evolution. 
-
-These questions are from [Sutherland et al. 2012](http://onlinelibrary.wiley.com/doi/10.1111/1365-2745.12025/full). This paper is on WebCampus (optional). Of course there are many more interesting questions- limited only by your imagination. 
-
-You may not understand all these questions now- we will revisit this list at the end of the semester!
-
-![](Fragmentation1.jpg)
-
-- What are the ecological consequences of species becoming less connected through **fragmentation** or more connected through globalization?   
-
-![](Juniperus_range_map.png)
-
-- What are the ecological mechanisms that govern species’ **range margins**? (figure is for common juniper)
-
-- How do patterns at the population scale (e.g., density-dependence) relate to processes at the level of individuals (e.g., behavioral interactions)? (emergent properties!)
-
-![](Wolves_and_bones.jpg)
-
-- What is the relative importance of direct (**predation, contest competition**) vs. indirect (induced behavioral change; e.g., fear) interactions in determining the effects of one species on others?    
-
-![](Gopherus_agassizii.jpg)
-
-- What demographic traits determine the **resilience** of natural populations to disturbance and perturbation (e.g., climate change)?  
-
-- To what extent will climate change de-couple trophic links due to **phenological mismatches**?    
-- How do natural populations and communities respond to increased frequencies of **extreme weather events** predicted under global climate change?    
-- How do **interspecific interactions** affect species responses to global change?     
-
-- How important are **rare species** in the functioning of ecological communities?     
-
-#### And many more... 
+In lab we went over the mathematics of exponential growth. Now we will go over the concept of exponential growth, focusing on the idea of exponential growth as a **positive feedback loop**. 
 
 ![](positivefeedback1.png)
 
