--- a/index.Rmd
+++ b/index.Rmd
@@ -17,11 +17,11 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Office:** Fleischmann Agriculture, room 220e  
 **Phone:** 775-682-7449     
 **Email**: kevinshoemaker_at_unr_dot_edu        
-**Office hours**: Wed 3pm in FA 220e         
+**Office hours**: M 4pm in FA 220e         
 **Course Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	    
  
 **Teaching Assistant** Margarete Walden (mwalden_dot_unr_dot_edu)          
-**TA Office hours**: TBD (check website for updates)       
+**TA Office hours**: T 3pm in FA 235       
 
 ### Course Meeting Times
 
