--- a/LECTURE3.Rmd
+++ b/LECTURE3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Malthus and the beginning of Pop Ecol"
 author: "NRES 470/670"
-date: "Spring 2021"
+date: "Spring 2022"
 output: 
   html_document: 
     theme: spacelab
@@ -28,11 +28,9 @@ Or in a more verbose form...
 Finally, his economic argument can be summed up as follows:
 
 1. There are always hard limits to (human) population growth, and these limits have to do with food availability,
-2. When there is more food available, humans will tend to use that toward reproduction, 
+2. When there is more food available, humans will tend to apply that toward increased reproduction, 
 3. Which will only temporarily forestall a crisis when we inevitably reach the limits to growth, leading to.:
 4. Widespread famine, disease etc. - especially among poor and disadvantaged populations.
-
-Is this an optimistic message or a pessimistic message?
 
 > "If they would rather die they had better do it, and decrease the surplus population" - Ebenezer Scrooge
 
