--- a/LECTURE3.Rmd
+++ b/LECTURE3.Rmd
@@ -25,7 +25,7 @@ Or in a more verbose form...
 
 > "I think I may make fairly two postulata. First, that food is necessary to the existence of man. Secondly, that the passion between the sexes is necessary and will remain nearly in its present state ... Assuming then my postulata as granted, I say, that the power of population is indefinitely greater than the power in the earth to produce subsistence for man. Population, when unchecked, increases in a *geometrical ratio*. Subsistence increases only in an *arithmetical ratio*. A slight acquaintance with numbers will show the immensity of the first power in comparison of the second. By the law of our nature which makes food necessary to the life of man, the effects of these two unequal powers must be kept equal. This implies a strong and constantly operating check on population from the difficulty of subsistence. This difficulty must fall somewhere and must necessarily be severely felt by a large portion of mankind..."
 
-Finally, his economic argument can be summed up as follows:
+Finally, his argument can be summed up as follows:
 
 1. There are always hard limits to (human) population growth, and these limits have to do with food availability,
 2. When there is more food available, humans will tend to apply that toward increased reproduction, 
@@ -40,7 +40,7 @@ Finally, his economic argument can be summed up as follows:
 ![](darwin1.jpg)
 
 
-Interestingly, in 1838 (four years after Malthus’ death), Charles Darwin, just back from his trip on HMS Beagle (1831–1836), was searching for possible mechanisms to explain the origin of species. On reading Malthus’ *Essay on the principle of population*, he realized one of the possible implications of the checks that controlled population growth (i.e., that the power of exponential growth means that many individuals will be born that won't be able to survive to adulthood due to resource limitations) and wrote: 
+Interestingly, in 1838 (four years after Malthus’ death), Charles Darwin, just back from his trip on HMS Beagle (1831–1836), was searching for possible mechanisms to explain the origin of species. On reading Malthus’ *Essay on the principle of population*, he realized one of the possible implications of the checks that controlled population growth (i.e., that the power of exponential growth, confronted with hard resource limitations, implies a 'population surplus' destined to die early) and wrote: 
 
 > '...favourable variations would tend to be preserved, and unfavourable ones to be destroyed ... The result of this would be the formation of a new species. Here, then, I had at last got a theory by which to work.' - Charles Darwin 
 
@@ -70,7 +70,7 @@ Else
 End If
 ```
 
-1. Put together a basic exponential-growth model for a new [Stock] named *Humans* (or just clone and modify a basic exponential growth model with birth and death rate). This [Stock] should have two [Flows], one [Flow In] named *Births* and one [Flow Out] named *Deaths*. Both *Births* and *Deaths* should be defined as the product of *Humans* and per-capita rate constants, respectively called *Birth rate* and *Death rate* (each defined on the canvas as [Variables]). This model is identical to the one you made in lab last week. 
+1. Put together a basic exponential-growth model for a new [Stock] named *Humans* (or just clone and modify a basic exponential growth model with birth and death rate). This [Stock] should have two [Flows], one [Flow In] named *Births* and one [Flow Out] named *Deaths*. Both *Births* and *Deaths* should be defined as the product of *Humans* and per-capita rate constants, respectively called *Birth rate* and *Death rate* (each defined on the canvas as [Variables]). This model is identical to one of the models you will (or have already made) in lab 1. 
 
 2. Initialize the population of *Humans* to 1000. Set the *Birth rate* to 0.1 (humans produced per human per year). Set the *Death rate* to 0.01 (humans lost per human per year). Change the settings so that the simulation runs for 100 years.  
 
@@ -78,7 +78,7 @@ End If
 
 4. Now make a new [Stock] called *Limit*, representing the population limit for *Humans*. This could, for instance, represent the *maximum number of humans that could be supported indefinitely if all arable land were cultivated with the most energy-rich crop possible*. Initialize the "Limit" to half a million. 
 
-5. In preparation for implementing the "famine" condition (death rate increases to 99% if *Humans* exceeds *Limit*), create new **Links** from *Humans* to *Death rate* and from *Limit* to *Death rate*. Your canvas should look something like the image below:  
+5. In preparation for implementing the "famine" condition (death rate increases to 99% if *Humans* exceeds *Limit* -- otherwise remains at 1%), create new **Links** from *Humans* to *Death rate* and from *Limit* to *Death rate*. Your canvas should look something like the image below:  
 
 ![](IM4.jpg)
 
@@ -91,6 +91,7 @@ Else
   0.99
 End If
 ```
+
 You don't actually need to type this all in, you can just click on "Programming Functions" in the equation editor, and select "If-Then-Else" from the options. It is always better to use the built-in syntax generators, since that prevents you from making any unintended syntax errors (which can be difficult to de-bug!).   
 
 7. Run the model and describe what happens.  
