--- a/index.Rmd
+++ b/index.Rmd
@@ -274,6 +274,8 @@ rmd2rscript("LECTURE8.Rmd")
 rmd2rscript("LECTURE15.Rmd")
 rmd2rscript("LECTURE16.Rmd")
 rmd2rscript("LECTURE17.Rmd")
+
+rmd2rscript("LAB1.Rmd")  ##
 rmd2rscript("LAB4.Rmd")  ##
 rmd2rscript("LAB5.Rmd")
 rmd2rscript("LAB7.Rmd")
